--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /Bitmap Demo/build/
 /OpenCV Test/nbproject/private/
 /OpenCV Test/build/
+/Webcam Application/nbproject/private/
+/Webcam Application/build/
+/Webcam Application/dist/
