--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /Webcam Application/build/
 /Webcam Application/dist/
 /OpenCV Test/dist/
+/FloodFill Demo/nbproject/private/
+/FloodFill Demo/build/
