--- a/FloodFill Demo/nbproject/project.properties
+++ b/FloodFill Demo/nbproject/project.properties
@@ -61,7 +61,7 @@ main.class=floodfill.demo.FloodFillDemo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8_151
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
